--- a/page7.html
+++ b/page7.html
@@ -143,7 +143,7 @@
 			</li>
     		</ul>
     		<div><img id='confirm' src="imgs/confirm.png" width="220px" onclick="check()"></div>
-			<div id="tip_5">请拖拽完成拼图~</div>
+			<div id="tip_5">请点击交换图片完成拼图~</div>
 			<div id="tip_6"></div>
 			<div id='names'>
 				<div id='tt1' >
