--- a/page4.html
+++ b/page4.html
@@ -129,10 +129,10 @@
 					<img src="imgs/hongjingtian.png" height="100px" onclick="check1()" >
 				</li>
 				<li id='t2' >
-					<img src="imgs/linmeimei.png" height="100px" onclick="check2()">
+					<img src="imgs/linmeimei1.png" height="100px" onclick="check2()">
 				</li>
 				<li id='t3'>
-					<img src="imgs/songyinzhang.png" height="100px" onclick="check3()">
+					<img src="imgs/songyinzhang1.png" height="100px" onclick="check3()">
 				</li>
 			</ul>
 			<div id='names'>
